{
    "name": "GamePad",
    "maps": [
        {
            "name": "Gameplay",
            "id": "428f1448-3d9f-4349-aa70-4312aeb9e407",
            "actions": [
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "bbf318e0-9213-4390-8f9f-9e7c259eb3cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "7fb1f022-6b7e-4343-a6e5-f1c15ce75e3f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "9d398e22-fbe6-4423-8165-85ebd833fab7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Time",
                    "type": "Button",
                    "id": "39e966a5-7815-4c96-8d98-1bb1baff7681",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ice",
                    "type": "Button",
                    "id": "a7900ba3-c1c1-4d8e-8922-d1499da29a2f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Electric",
                    "type": "Button",
                    "id": "3a6a7946-62ea-4d6c-ad8d-5e649cb861b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "d24ac612-8a70-42b2-85d5-8db99c9ab7f7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunL",
                    "type": "Button",
                    "id": "e280ce9f-5ee1-4a05-a358-309fae2cdca1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunR",
                    "type": "Button",
                    "id": "5329a1bb-0554-448c-9a7d-211465fd71a3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump2",
                    "type": "Button",
                    "id": "08afbf05-6927-41dc-83f0-2c4e843669a5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll2",
                    "type": "Button",
                    "id": "f71d9f17-a042-4178-9b2d-ebadb075ed9b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Time2",
                    "type": "Button",
                    "id": "abd9c95b-f50b-49fe-b0ee-d08ecdf05c28",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ice2",
                    "type": "Button",
                    "id": "79d4e697-ca3d-4807-8b07-59f9638bdba2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Electric2",
                    "type": "Button",
                    "id": "9c670662-4e78-48ac-9af1-32bf7b255a27",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire2",
                    "type": "Button",
                    "id": "67dd587e-e8b1-4d53-84a6-aa2c9694cff5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d955cde9-7a45-4082-bfd9-b7bdaa458995",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dcfa8c3-5fb3-4132-a40a-9d697b5e7b7d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f927ea89-e303-40ff-b0a0-0896ca950a3a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99e8809c-b993-457d-b1f4-56ec7a2e6247",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80050aa1-7647-4dc6-bb6c-4c39eb869ab7",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ice",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73243ed2-8f44-4545-a998-24bb97d7f4a1",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Electric",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25001c4a-6c66-4b14-b487-97e84bab545e",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53fd98e0-a950-4c8a-89ce-03f01357c759",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a05d53eb-800f-4187-8551-dbcee2680284",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b93693a5-004a-4375-b0ff-3332058a0752",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0cfacca8-d8a8-4b2c-bfd2-3450bf6000c1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b1d456b3-fb71-44cc-a213-264055e7ced1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Time2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc87d905-5643-4fd4-b9f9-89ed610a83ef",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ice2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f60d728-2cc1-4fd5-a027-4562d0d76b3f",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Electric2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23d4377d-afab-4235-a01b-b9998071ff1a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keyboard",
            "id": "153ec28d-abd9-4b2a-9c86-8bbdb2268bae",
            "actions": [
                {
                    "name": "RunL",
                    "type": "Button",
                    "id": "e79a0acc-143e-4476-8047-9707c4c427ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RunR",
                    "type": "Button",
                    "id": "6e58c978-b6a6-420b-aaeb-e28b54e646d7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "35c9c6f0-8c96-48d0-93f6-d50ad4c9fae9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Thunder",
                    "type": "Button",
                    "id": "db24e843-7ac5-4b83-ba89-67963a5fbce7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e33fab0b-bcbd-4934-a088-e62633ebeb29",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9589e0d2-4bb4-40b2-8e6e-2233979680d8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "04bcf8df-ab46-4b33-ac60-b3c10473d8d4",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecec24cf-16de-49a5-89e6-b76d58e3e8ac",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thunder",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}